--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,7 +11,7 @@
                     <h6>{{getTranslate('address')}}</h6>
                 </div>
                 <div class="col-sm">
-                    <p class="text-secondary">Fevzi Çakmak Mh. 10644 Sk. No:46/G Karatay/Konya</p>
+                    <p class="text-secondary">{{getTranslate('addressFromDb')}}</p>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
                     <h6>{{getTranslate('phone')}}</h6>
                 </div>
                 <div class="col-sm">
-                    <p class="text-secondary">+90 332 345 06 95</p>
+                    <p class="text-secondary">{{getTranslate('phoneNumberFromDb')}}</p>
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <h6>{{getTranslate('gsm')}}</h6>
                 </div>
                 <div class="col-sm">
-                    <p class="text-secondary">+90 542 519 09 40</p>
+                    <p class="text-secondary">{{getTranslate('gsmFromDb')}}</p>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     <h6>{{getTranslate('email')}} 1</h6>
                 </div>
                 <div class="col-sm">
-                    <p class="text-secondary"> dagbulent@hotmail.com </p>
+                    <p class="text-secondary">{{getTranslate('email1FromDb')}}</p>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     <h6>{{getTranslate('email')}} 2</h6>
                 </div>
                 <div class="col-sm">
-                    <p class="text-secondary">info@allentplastik.com</p>
+                    <p class="text-secondary">{{getTranslate('email2FromDb')}}</p>
                 </div>
             </div>
         </div>
