--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -6,7 +6,7 @@
     <div class="d-none d-lg-block mb-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div *ngFor="let mold of molds" class="col">
-                <div class="card text-white bg-dark h-100">
+                <div class="card border-light text-white bg-dark h-100">
                     <img [src]="mold.path" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{mold.name}}</h5>
