--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -18,11 +18,41 @@
   color: #555;
 }
 
-.list-group .list-group-item{
+.list-group .list-group-item {
   background-color: var(--app-background-color);
   color: white;
 }
 
-.bg-custom{
+.bg-custom {
   background-color: var(--app-background-color);
+}
+
+.img {
+  height: 500px;
+}
+
+.accordion-item{
+  background: #212529;
+}
+
+.accordion-button{
+  background: #212529;
+}
+
+.accordion-button:after {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
+.accordion-button:not(.collapsed){
+  box-shadow: inset 0 0px 0 rgba(0,0,0,.125);
+}
+
+.list-unstyled > li > a {
+  color: #495057;
+  text-decoration: none;
+}
+
+.list-unstyled > li > a:hover {
+  color: #ffffff;
+  text-decoration: underline;
 }
