--- a/src/app/components/references/references.component.css
+++ b/src/app/components/references/references.component.css
@@ -1,29 +1,39 @@
+/* İmg Gray Effect */
+
 .img {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   width: 300px;
   height: 300px;
-  transition: filter .4s ease-in-out;
+  transition: filter 0.4s ease-in-out;
 }
 
-.img:hover, .img:active {
-    filter: none;
-    -webkit-filter: grayscale(0);
+.img:hover {
+  filter: none;
+  -webkit-filter: grayscale(0);
   transition: 0.5;
+}
+
+.img::after {
+  background-color: rgba(#000, 0.5);
 }
 
 /* SM */
 
 .img-sm {
   -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
+  filter: grayscale(100%) contrast(120%);
   height: 150px;
-  transition: filter .4s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  -webkit-transition: filter 0.3s, -webkit-filter 0.3s;
+}
+.img-sm.active {
+  filter: none;
+  -webkit-filter: grayscale(0);
+  transition: 0.8;
 }
 
-.img-sm:hover, .img-sm:active {
-    filter: none;
-    -webkit-filter: grayscale(0);
-  transition: 0.5;
-}
 
+
+
+/* Scrolll */
